--- a/WeatherApp/Resources/Styles/Colors.xaml
+++ b/WeatherApp/Resources/Styles/Colors.xaml
@@ -4,8 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#110f3a</Color>
-    <Color x:Key="Secondary">#b8b8c4</Color>
+    <Color x:Key="Primary">#FAB442</Color>
+    <Color x:Key="Secondary">#ffffff</Color>
     <Color x:Key="Tertiary">#548bcf</Color>
     <Color x:Key="LightGray">#d2d2c2</Color>
     <Color x:Key="White">White</Color>
