--- a/WeatherApp/View/HomePage.xaml
+++ b/WeatherApp/View/HomePage.xaml
@@ -13,7 +13,18 @@
         <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
 
-    <Grid RowSpacing="0">
+    <StackLayout>
+        <HorizontalStackLayout Margin="20, 20, 0, 0">
+            <ImageButton Source="menu.png" HeightRequest="50" WidthRequest="30" Command="{Binding ToggleFavoritesCommand}"/>
+        </HorizontalStackLayout>
+        
+        
+        
+    </StackLayout>
+    
+
+
+    <!--<Grid RowSpacing="0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -23,9 +34,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
-
-        <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="background" Aspect="AspectFill"/>
-
         <ActivityIndicator IsRunning="{Binding IsBusy}"
                            IsVisible="{Binding IsBusy}" />
 
@@ -238,5 +246,5 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
         </StackLayout>
-    </Grid>
+    </Grid>-->
 </ContentPage>
