--- a/WeatherApp/View/FavouritesPage.xaml
+++ b/WeatherApp/View/FavouritesPage.xaml
@@ -93,9 +93,9 @@
                                                 FontSize="13"
                                                 TextColor="{StaticResource Secondary}"
                                                 HorizontalTextAlignment="Center"/>
-                                            <StackLayout Orientation="Horizontal" Margin="30, 0, 0, 0">
+                                            <StackLayout Orientation="Horizontal" Margin="28, 0, 0, 0">
                                                 <Label Text="{Binding Location.Name}"
-                                                    FontSize="13"
+                                                    FontSize="15"
                                                     TextColor="{StaticResource Secondary}"
                                                     HorizontalTextAlignment="Center"/>
                                                 <Label Text=", "
@@ -103,12 +103,13 @@
                                                     TextColor="{StaticResource Secondary}"
                                                     HorizontalTextAlignment="Center"/>
                                                 <Label Text="{Binding Location.Country}"
-                                                    FontSize="13"
+                                                    FontSize="15"
                                                     TextColor="{StaticResource Secondary}"
                                                     HorizontalTextAlignment="Center"/>
                                             </StackLayout>
                                         </VerticalStackLayout>
                                         <Image WidthRequest="120"
+                                               Margin="30, 0, 0, 0"
                                                 HeightRequest="120"
                                                 Grid.Column="1"
                                                 Source="{Binding Current.Condition.Icon, StringFormat='https:{0}'}"/>
