--- a/WeatherApp/View/FavouritesPage.xaml
+++ b/WeatherApp/View/FavouritesPage.xaml
@@ -45,47 +45,49 @@
                         Placeholder="Search locations..."
                         Background="{StaticResource Primary}"
                         />
-                    <CollectionView ItemsLayout="VerticalList"
-                        ItemsSource="{Binding SearchResults}"
-                        VerticalScrollBarVisibility="Never"
-                        HorizontalScrollBarVisibility="Never">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate x:DataType="models:CurrentJsonResponse">
-                                <Frame BorderColor="#2A2C53"
-                                       CornerRadius="5"
-                                       Padding="5"
-                                       Margin="10, 5"
-                                       BackgroundColor="#1E1E45">
-                                    <FlexLayout AlignContent="Center"
-                                                JustifyContent="SpaceBetween"
-                                                HeightRequest="70">
-                                        <VerticalStackLayout Margin="10, 0, 0, 0">
-                                            <Label Text="{Binding Location.Name}"
-                                                   FontSize="24"
-                                                   FontFamily="PoppinsSemibold"
-                                                   HorizontalTextAlignment="Center"/>
-                                            <Label Text="{Binding Location.Country}"
-                                                   FontSize="12"
-                                                   TextColor="{StaticResource Secondary}"
-                                                   HorizontalTextAlignment="Center"/>
-                                        </VerticalStackLayout>
-                                        <Button Text="Save City"
-                                                TextColor="White"
-                                                BackgroundColor="{StaticResource Primary}"
-                                                FontSize="14"
-                                                FontFamily="PoppinsMedium"
-                                                HorizontalOptions="Center"
-                                                VerticalOptions="Center"
-                                                Margin="0, 0, 10, 0"
-                                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:FavouritesViewModel}}, Path=SaveCityCommand}"
-                                                CommandParameter="{Binding Location.Name}" />
-                                    </FlexLayout>
-                                </Frame>
-
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
+                    
                 </Frame>
+                <CollectionView ItemsLayout="VerticalList"
+                                ItemsSource="{Binding SearchResults}"
+                                VerticalScrollBarVisibility="Never"
+                                HorizontalScrollBarVisibility="Never">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="models:CurrentJsonResponse">
+                            <Frame Background="#BC670E"
+                                   BorderColor="#BC670E"
+                                   CornerRadius="5"
+                                   Padding="5"
+                                   Margin="10, 5"
+                                   >    
+                                <FlexLayout AlignContent="Center"
+                                            JustifyContent="SpaceBetween"
+                                            HeightRequest="70">
+                                    <VerticalStackLayout Margin="10, 0, 0, 0">
+                                        <Label Text="{Binding Location.Name}"
+                                               FontSize="24"
+                                               FontFamily="PoppinsSemibold"
+                                               HorizontalTextAlignment="Center"/>
+                                        <Label Text="{Binding Location.Country}"
+                                               FontSize="12"
+                                               TextColor="{StaticResource Secondary}"
+                                               HorizontalTextAlignment="Center"/>
+                                    </VerticalStackLayout>
+                                    <Button Text="Save City"
+                                            TextColor="White"
+                                            BackgroundColor="{StaticResource Primary}"
+                                            FontSize="14"
+                                            FontFamily="PoppinsMedium"
+                                            HorizontalOptions="Center"
+                                            VerticalOptions="Center"
+                                            Margin="0, 0, 10, 0"
+                                            Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:FavouritesViewModel}}, Path=SaveCityCommand}"
+                                            CommandParameter="{Binding Location.Name}" />
+                                </FlexLayout>
+                            </Frame>
+
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
 
                 <Label Text="Recently Added"
                        FontSize="24"
