--- a/WeatherApp/View/HomePage.xaml
+++ b/WeatherApp/View/HomePage.xaml
@@ -5,109 +5,114 @@
              xmlns:model="clr-namespace:WeatherAPI.Standard.Models;assembly=WeatherAPI.Standard"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:DataType="viewmodel:HomeViewModel"
-             BackgroundColor="{Binding BackgroundColor}"
+             BackgroundImageSource="sunny.png"
              Title="Home">
+             <!--BackgroundColor="{Binding BackgroundColor}"-->
 
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
     </ContentPage.Behaviors>
 
     <StackLayout>
-        <FlexLayout Margin="20, 20, 20, 0" JustifyContent="SpaceBetween">
+        <FlexLayout Margin="20, 20, 20, 20" JustifyContent="SpaceBetween">
             <Button Padding="0" BackgroundColor="Transparent" Command="{Binding ToggleCelsiusFerenheit}"  Text="{Binding ButtonText}" FontSize="32"/>
-            <ImageButton Source="menu.png" HeightRequest="50" WidthRequest="30" Command="{Binding ToggleFavoritesCommand}"/>
+            <Label Text="{Binding CurrentLocation.Name}" 
+                   TextColor="White" 
+                   HorizontalTextAlignment="Center"
+                   VerticalOptions="Center"
+                   FontFamily="Impact"
+                   FontAttributes="Bold"
+                   FontSize="30"
+                   Padding="0"
+                   Margin="0, 0, 0, 0"/>
+            <ImageButton HorizontalOptions="Center" Source="menu.png" HeightRequest="50" WidthRequest="30" Command="{Binding ToggleFavoritesCommand}"/>
         </FlexLayout>
 
-        <VerticalStackLayout HorizontalOptions="Center" Margin="0, 10, 0, 0">
-            <Frame Padding="0" CornerRadius="200" HeightRequest="250" WidthRequest="250">
-                <Image HeightRequest="200" WidthRequest="200" Source="{Binding CurrentWeather.Condition.Icon, StringFormat='https:{0}'}"/>
-            </Frame>
-            <Label Text="{Binding CurrentTemp, StringFormat='{0:F1}°'}" 
-                   HorizontalOptions="Center"
-                   Margin="0, 10, 0, 0"
-                   FontSize="60"
-                   FontFamily="Impact"
-                   FontAttributes="Bold"/>
-        </VerticalStackLayout>
+        <Label Margin="20, 0, 0, 0" Text="Now" FontSize="21" FontAttributes="Bold"></Label>
+
+        <FlexLayout Margin="20, 0, 20, 180" JustifyContent="SpaceBetween">
+            <VerticalStackLayout>
+                <HorizontalStackLayout>
+                    <Label Text="{Binding CurrentTemp, StringFormat='{0:F1}°'}" 
+                                   TextColor="White"
+                                    FontSize="40"
+                                    FontFamily="Impact"
+                                    FontAttributes="Bold" VerticalOptions="Center"/>
+                    <Image HeightRequest="80" WidthRequest="80" Source="{Binding CurrentWeather.Condition.Icon, StringFormat='https:{0}'}"/>
+                </HorizontalStackLayout>
+                <HorizontalStackLayout>
+                    <Label Text="High: "></Label>
+                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding WeatherForecastDays[0].Day.MaxtempC}"/>
+                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding WeatherForecastDays[0].Day.MaxtempF}"/>
+                    <Label Text=" / "></Label>
+                    <Label Text="Low: "></Label>
+                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding WeatherForecastDays[0].Day.MintempC}"/>
+                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding WeatherForecastDays[0].Day.MintempF}"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+            <VerticalStackLayout VerticalOptions="Center">
+                <Label Text="{Binding CurrentWeather.Condition.Text}" HorizontalOptions="End" FontAttributes="Bold" FontSize="18"/>
+                <HorizontalStackLayout HorizontalOptions="End">
+                    <Label Text="Feels like: "/>
+                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding CurrentWeather.FeelslikeC}" HorizontalOptions="Center"/>
+                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding CurrentWeather.FeelslikeF}" HorizontalOptions="Center"/>
+                </HorizontalStackLayout>
+            </VerticalStackLayout>
+        </FlexLayout>
 
         <AbsoluteLayout Margin="0, 50, 0, 0" HeightRequest="400">
-            <Frame CornerRadius="50" BackgroundColor="#F59E42"
-                   AbsoluteLayout.LayoutFlags="All"
-                   AbsoluteLayout.LayoutBounds="0.5, 1, 1, 1" />
             <Frame Margin="20, 50, 0, 0" WidthRequest="350"
-                   HeightRequest="260" CornerRadius="40" BackgroundColor="#FAB442">
-                <StackLayout>
-                    <Frame HeightRequest="70" Padding="10" BackgroundColor="#F59E42" CornerRadius="10">
-                        <HorizontalStackLayout>
-                            <Button Text="Hourly" Padding="0" WidthRequest="124" Margin="10, 0, 0, 0"
-                                    CornerRadius="10" HeightRequest="40" FontSize="18"
-                                    FontAttributes="Bold" BackgroundColor="#F38717"/>
-                            <Button Margin="20, 0, 0, 0" Text="Daily" Padding="0" 
-                                    WidthRequest="124" CornerRadius="10"
-                                    HeightRequest="40" FontSize="18" BackgroundColor="White"
-                                    TextColor="Black" FontAttributes="Bold"/>
-                        </HorizontalStackLayout>
-                    </Frame>
+                   HeightRequest="260" CornerRadius="40" BackgroundColor="#50FAB442">
+                <StackLayout VerticalOptions="Center">
+                    <HorizontalStackLayout HorizontalOptions="Center">
+                        <Button Text="Hourly" Padding="0" WidthRequest="124" Margin="10, 0, 0, 0"
+                                CornerRadius="10" HeightRequest="40" FontSize="18"
+                                FontAttributes="Bold" BackgroundColor="#F38717"/>
+                        <Button Margin="20, 0, 0, 0" Text="Daily" Padding="0" 
+                                WidthRequest="124" CornerRadius="10"
+                                HeightRequest="40" FontSize="18" BackgroundColor="White"
+                                TextColor="Black" FontAttributes="Bold"/>
+                    </HorizontalStackLayout>
                     <CollectionView IsVisible="{Binding IsNotBusy}"
-                                    HeightRequest="160"
-                                    ItemsSource="{Binding WeatherForecastHours}"
-                                    VerticalScrollBarVisibility="Never"
-                                    HorizontalScrollBarVisibility="Never">
-                        <CollectionView.ItemsLayout>
-                            <LinearItemsLayout Orientation="Horizontal" SnapPointsAlignment="Start"/>
-                        </CollectionView.ItemsLayout>
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate x:DataType="model:Hour">
-                                <FlexLayout WidthRequest="100">
-                                    <Frame Background="#F38717"
-                                           CornerRadius="20"
-                                           WidthRequest="80"
-                                           HeightRequest="130"
-                                           Margin="10, 20, 10, 30"
-                                           Padding="0">
-                                        <VerticalStackLayout WidthRequest="80">
-                                            <Image WidthRequest="50"
-                                                   HeightRequest="50"
-                                                   Source="{Binding Condition.Icon, StringFormat='https:{0}'}"/>
-                                            <Label Text="{Binding Time, StringFormat='{0}'}"
-                                                   FontFamily="Calibri"
-                                                   FontAttributes="Bold"
-                                                   HorizontalTextAlignment="Center"
-                                                   FontSize="15" Margin="0, 3, 0, 0"/>
-                                            <Label Text="{Binding TempC, StringFormat='{0:F1} °C'}"
-                                                   FontSize="18"
-                                                   Margin="0, 10, 0, 0"
-                                                   FontFamily="Calibri" FontAttributes="Bold"
-                                                   HorizontalTextAlignment="Center"
-                                                   IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsCelsius}"/>
-                                            <Label Text="{Binding TempF, StringFormat='{0:F1} °F'}"
-                                                   FontSize="18"
-                                                   Margin="0, 10, 0, 0"
-                                                   FontFamily="Calibri" FontAttributes="Bold"
-                                                   HorizontalTextAlignment="Center"
-                                                   IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsFerenheit}"/>
-                                        </VerticalStackLayout>
-                                    </Frame>
-                                </FlexLayout>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
+                                HeightRequest="160"
+                                ItemsSource="{Binding WeatherForecastHours}"
+                                VerticalScrollBarVisibility="Never"
+                                HorizontalScrollBarVisibility="Never">
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout Orientation="Horizontal" SnapPointsAlignment="Start"/>
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="model:Hour">
+                            <Frame Background="#F38717"
+                                    CornerRadius="15"
+                                    WidthRequest="70"
+                                    HeightRequest="130"
+                                    Margin="10, 50, 10, 30">
+                                <VerticalStackLayout WidthRequest="80" VerticalOptions="Center">
+                                    <Image WidthRequest="50"
+                                            HeightRequest="50"
+                                            Source="{Binding Condition.Icon, StringFormat='https:{0}'}"/>
+                                    <Label Text="{Binding Time, StringFormat='{0}'}"
+                                            FontFamily="Calibri"
+                                            FontAttributes="Bold"
+                                            HorizontalTextAlignment="Center"
+                                            FontSize="14" Margin="0, 3, 0, 0"/>
+                                    <Label Text="{Binding TempC, StringFormat='{0:F1} °C'}"
+                                            FontSize="16"
+                                            FontFamily="Calibri" FontAttributes="Bold"
+                                            HorizontalTextAlignment="Center"
+                                            IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsCelsius}"/>
+                                    <Label Text="{Binding TempF, StringFormat='{0:F1} °F'}"
+                                            FontSize="16"
+                                            FontFamily="Calibri" FontAttributes="Bold"
+                                            HorizontalTextAlignment="Center"
+                                            IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsFerenheit}"/>
+                                </VerticalStackLayout>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
                 </StackLayout>
-            </Frame>
-            <Frame CornerRadius="25" BackgroundColor="White"
-                   HeightRequest="60" MinimumWidthRequest="200"
-                   AbsoluteLayout.LayoutFlags="PositionProportional"
-                   AbsoluteLayout.LayoutBounds="0.5, 0, AutoSize, AutoSize" 
-                   Margin="0, -32, 0, 0"
-                   Padding="0">
-                <Label Text="{Binding CurrentLocation.Name}" 
-                       TextColor="#FAB442" 
-                       HorizontalTextAlignment="Center"
-                       FontFamily="Impact"
-                       FontAttributes="Bold"
-                       FontSize="30"
-                       Padding="0"
-                       Margin="0, 6, 0, 0"/>
             </Frame>
         </AbsoluteLayout>
     </StackLayout>
