--- a/WeatherApp/View/HomePage.xaml
+++ b/WeatherApp/View/HomePage.xaml
@@ -61,15 +61,15 @@
 
         <AbsoluteLayout Margin="0, 50, 0, 0" HeightRequest="400">
             <Frame Margin="20, 50, 0, 0" WidthRequest="350"
-                   HeightRequest="260" CornerRadius="40" BackgroundColor="#50FAB442">
+                   HeightRequest="260" CornerRadius="40" BackgroundColor="{Binding TransparentBackground}">
                 <StackLayout VerticalOptions="Center">
                     <HorizontalStackLayout HorizontalOptions="Center">
                         <Button Text="Hourly" Padding="0" WidthRequest="124" Margin="10, 0, 0, 0"
                                     CornerRadius="10" HeightRequest="40" FontSize="18"
-                                    FontAttributes="Bold" BackgroundColor="#FAB442"/>
+                                    FontAttributes="Bold" BackgroundColor="{Binding PrimaryColor}"/>
                         <Button Margin="20, 0, 0, 0" Text="Daily" Padding="0" 
                             WidthRequest="124" CornerRadius="10"
-                            HeightRequest="40" FontSize="18" BackgroundColor="#FBC267"
+                            HeightRequest="40" FontSize="18" BackgroundColor="{Binding SecondaryColor}"
                             TextColor="White"/>
                     </HorizontalStackLayout>
                     <CollectionView IsVisible="{Binding IsNotBusy}"
@@ -82,7 +82,7 @@
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="model:Hour">
-                                <Frame Background="#FAB442"
+                                <Frame Background="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=PrimaryColor}"
                                     CornerRadius="15"
                                     WidthRequest="70"
                                     HeightRequest="130"
