--- a/WeatherApp/View/FavouritesPage.xaml
+++ b/WeatherApp/View/FavouritesPage.xaml
@@ -105,8 +105,8 @@
                                 <SwipeView.RightItems>
                                     <SwipeItems>
                                         <SwipeItem Text="Delete"
+                                                   BackgroundColor="Transparent"
                                                     IconImageSource="delete.png"
-                                                    BackgroundColor="red"
                                                     Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:FavouritesViewModel}}, Path=DeleteLocationCommand}"
                                                     CommandParameter="{Binding Location.Name}" />
                                     </SwipeItems>
